# midi_to_ndi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run_debug.bat  run_release.bat
src/: main.cpp  ndimidi.cpp  ndimidi.hpp  pch.hpp
